@@ -5,10 +5,10 @@ use warnings;
 
 our $VERSION = '0.52';
 
-use Clone ();
 use Role::Tiny::With;
 use Scalar::Util qw( refaddr );
 use Specio::Library::Builtins;
+use Specio qw( _clone );
 use Specio::OO;
 
 use Specio::Constraint::Role::Interface;
@@ -16,7 +16,7 @@ with 'Specio::Constraint::Role::Interface';
 
 {
     ## no critic (Subroutines::ProtectPrivateSubs)
-    my $attrs = Clone::clone( Specio::Constraint::Role::Interface::_attrs() );
+    my $attrs = _clone( Specio::Constraint::Role::Interface::_attrs() );
     ## use critic
 
     for my $name (qw( parent _inline_generator )) {
